Fix image from stretching

--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,7 @@ main {
 .latest-article img {
   width: 100%;
   height: 145px;
+  object-fit: cover;
 }
 
 .latest-article h4 {
